feat: add documentation for createOpening
